fixing breadcrumbs on small screens

--- a/wp-content/themes/uwdental-2014/style.css
+++ b/wp-content/themes/uwdental-2014/style.css
@@ -40,7 +40,7 @@ p {
 .uw-breadcrumbs li { top:3px;}
 
 @media only screen and (max-width: 767px) {
-	.uw-breadcrumbs li:after { top:8px;}
+	.uw-breadcrumbs li:after { top:6px;}
 }
 
 a.uw-btn {
